[package]
name = "day_1"
version = "0.1.0"
authors = ["Smaug123 <3138005+Smaug123@users.noreply.github.com>"]
edition = "2021"

[features]
no_real_inputs = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "day_1"
harness = false
