[package]
name = "day_2"
version = "0.1.0"
authors = ["Smaug123 <3138005+Smaug123@users.noreply.github.com>"]
edition = "2021"

[features]
no_real_inputs = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
intcode = { path = "../intcode" }

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "day_2"
harness = false
