[package]
name = "intcode"
version = "0.1.0"
authors = ["Smaug123 <3138005+Smaug123@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "2.0.9"

[dev-dependencies]
criterion = "0.4.0"
